<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Clifford Liu
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="timetable_load_remove">Remove the present one</string>
    <string name="timetable_load_new">Parse from clipboard</string>
    <string name="timetable_manual_browsers">Google Chrome, Microsoft Edge, Samsung Internet Browser, Via Browser, XBrowser, Magic Browser, VC Browser, Salfish Browser (by Ruanmei.com), Lim Browser, H5 Browser, Opera Browser, DU Browser, 360 Browser, Sogou Browser, YuBrowser, Maxthon Browser etc.\n\nUnsupported (Both Chinese app markets and Play Store editions):\nUC Browser, Firefox Browser, QQ Browser, Quark Browser etc.</string>
    <string name="timetable_manual_browser_support">Browser support</string>
    <string name="ttExport">Export timetable</string>
    <string name="ttTimeNotice">Please set date and time for your timetable</string>
    <string name="ics_Toast_open_fail">Fail, download related software!</string>
    <string name="ics_Toast_generating_success">Success!</string>
    <string name="ics_Toast_classtime_generating_fail">Error parsing time</string>
    <string name="ics_Button_set_date">Monday of school\'s first week</string>
    <string name="ics_Button_set_time_morning">Start time of morning classes</string>
    <string name="ics_Button_date_picker">Date &#38; time</string>
    <string name="ics_Button_picker_finish">Finish</string>
    <string name="ics_Button_set_time_afternoon">Start time of afternoon classes</string>
    <string name="ics_Button_set_time_evening">Start time of evening classes</string>
    <string name="ics_EditText_Time">%1$d min</string>
    <string name="ics_TextView_set_ClassTime_text">Short class duration in minutes</string>
    <string name="ics_Undo_AlertDialog_Message">Please continue like this</string>
    <string name="ics_Undo_AlertDialog_Button">Continue</string>
    <string name="ics_Undo_Toast_Nailed">Work completed</string>
    <string name="Settings_Switch_icsDefault_Text">School timetable be exported to Google Calendar</string>
    <string name="ics_Import_Toast_Null">No school timetable information for the time being</string>
    <string name="ics_Function_AlertDialog_Instruction">More information is needed\nPlease enter start week and end week below:</string>
    <string name="ics_Function_AlertDialog_EditText_StartingWeekHint">Start week</string>
    <string name="ics_Function_AlertDialog_EditText_EndingWeekHint">End week</string>
    <string name="ics_Function_AlertDialog_Title">Broken information</string>
    <string name="ics_TextView_MorningBreakTimeInstruction_Text">Morning break duration</string>
    <string name="ics_TextView_AfternoonBreakTimeInstruction_Text">Afternoon break duration</string>
    <string name="ics_TextView_EveningBreakTimeInstruction_Text">Evening break duration</string>
    <string name="ics_TextView_InferiorBreakTime">Short in minutes</string>
    <string name="ics_TextView_SuperiorBreakTime">Long in minutes</string>
    <string name="ics_TextView_ChooseBreakTime">In the section above, set the default break duration in all phases through a day, while each of the settings below will override the default of the corresponding phase.</string>
    <string name="ics_Part1_Button_OK_Text">OK</string>
    <string name="ics_Function_Toast_NOHtml_Text">Shift to supported browsers then try again</string>
    <string name="ics_toast_errortobedelt">Error to be analyzed</string>
    <string name="ics_alter_cname">Course name</string>
    <string name="ics_alter_cteacher">Teacher</string>
    <string name="ics_alter_croom">Location</string>
    <string name="ics_alter_clperiod">Duration</string>
    <string name="ics_alter_clphase">Time</string>
    <string name="ics_alter_periodswitch">Fortnightly</string>
    <string name="ics_alter_classlasting_1">1 small class</string>
    <string name="ics_alter_classlasting_2">2 small classes</string>
    <string name="ics_alter_classlasting_3">3 small classes</string>
    <string name="ics_alter_classtime_am1">1st period morning</string>
    <string name="ics_alter_classtime_am2">2nd period morning</string>
    <string name="ics_alter_classtime_pm1">1st period afternoon</string>
    <string name="ics_alter_classtime_pm2">2nd period afternoon</string>
    <string name="ics_alter_classtime_pm3">3rd period afternoon</string>
    <string name="ics_alter_classtime_eve2">2nd period evening</string>
    <string name="ics_Button_add">New course</string>
    <string name="ics_switch_app">App mode (do not specify time zone information)</string>
    <string name="ics_alter_classtime_eve1">1st period evening</string>
    <string name="ics_tv_break_duration">Break duration</string>
    <string name="ics_alter_classtime_am3">3rd period morning</string>
    <string name="ics_alter_classtime_eve3">3rd period evening</string>
    <string name="ics_instruction_help">Parsing timetable fails</string>
    <string name="ics_manual_help_solution">Since this feature is no longer maintained, we suggest that you look for other alternatives</string>
    <string name="ttValidateName">Please validate the course name</string>
    <string name="Advice_TextView_IssueReport_Text">School timetable code file</string>
    <string name="advice_textview_issue_details">The HTML file generated from the original school timetable code in clipboard</string>
    <string name="st_manual_features">Features:\n1. Parse the school timetable from school\'s education system website, only some of the ZFSoft education system are supported\n2. Generate iCalendar file (.ics) from school timetable, which can be imported into Google Calendar and so forth\n3. Week Indicator, to create all-day events on Monday that tells which week it is</string>
    <string name="st_manual_notes">Note:\n1. Make sure to set your date and time before exporting the timetable to calendar\n2. Repeat the process if your school timetable on school\'s education system website gets update, alternatively the update can be applied by manual modifications within the app\n3. You have to undo the previous calendar import before exporting the updated one</string>
    <string name="st_manual_instructions">To parse school timetable:\n1.Go find your school timetable on school\'s official ZFSoft education system website via supported browser\n2.Long-press on any item in your school timetable so as to enter text-selecting mode, then press \"select all\" and then \"copy\", the content is now copied to clipboard\n3.Come back and hit \"parse from clipboard\"</string>
</resources>
